AC_INIT(configure.in)
AM_INIT_AUTOMAKE(libomxil-B, 0.3)
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL

CFLAGS="${CFLAGS=} -Wall -g"

# Check if Alsa sound library is present
AC_CHECK_LIB(asound, snd_pcm_plugin_init, [with_alsalibrary=true], [with_alsalibrary=false])
AC_CHECK_HEADER(alsa/asoundlib.h, [], [with_alsalibrary=false])
AM_CONDITIONAL(WITH_ALSASINK, test x$with_alsalibrary = xtrue)

#Check for ffmpeg library existence
AC_CHECK_LIB(avcodec, avcodec_decode_audio, [with_ffmpeglibrary=true], [with_ffmpeglibrary=false])
AC_CHECK_HEADER(ffmpeg/avcodec.h, [], [with_ffmpeglibrary=false])
AC_CHECK_HEADER(ffmpeg/avformat.h, [], [with_ffmpeglibrary=false])
AM_CONDITIONAL(WITH_FFMPEGLIBRARY, test x$with_ffmpeglibrary = xtrue)

#Check for vorbis library existence
AC_CHECK_LIB(vorbis, ogg_sync_init, [with_vorbislibrary=true], [with_vorbislibrary=false])
AC_CHECK_HEADER(vorbis/codec.h, [], [with_vorbislibrary=false])
AM_CONDITIONAL(WITH_VORBISLIBRARY, test x$with_vorbislibrary = xtrue)

#Check for mad components dependencies
AC_CHECK_LIB(mad, mad_header_decode, [with_madlibrary=true], [with_madlibrary=false])
AC_CHECK_HEADER(mad.h, [], [with_madlibrary=false])
AC_CHECK_HEADER(id3tag.h, [], [with_madlibrary=false])
AM_CONDITIONAL(WITH_MADLIBRARY, test x$with_madlibrary = xtrue)


#Check whether ffmpeg components have been requested
AC_ARG_ENABLE(ffmpegcomponents,
  AC_HELP_STRING([--disable-ffmpegcomponents], [whether to disable ffmpeg components compilation]),
  [with_ffmpegcomponents=false],
  [with_ffmpegcomponents=true]) dnl default
AM_CONDITIONAL(WITH_FFMPEGCOMPONENTS, test x$with_ffmpegcomponents = xtrue && test x$with_ffmpeglibrary = xtrue)

#AM_CONDITIONAL(WITH_FFMPEGCOMPONENTS, test x$with_vorbislibrary = xtrue)

#Check whether mad components have been requested
AC_ARG_ENABLE(madcomponents,
  AC_HELP_STRING([--disable-madcomponents], [whether to disable mad components compilation]),
  [with_madcomponents=false],
  [with_madcomponents=true]) dnl default
AM_CONDITIONAL(WITH_MADCOMPONENTS, test x$with_madcomponents = xtrue && test x$with_madlibrary = xtrue)


#Check whether vorbis components have been requested
AC_ARG_ENABLE(vorbiscomponents,
  AC_HELP_STRING([--disable-vorbiscomponents], [whether to disable vorbis components compilation]),
  [with_vorbiscomponents=false],
  [with_vorbiscomponents=true]) dnl default
AM_CONDITIONAL(WITH_VORBISCOMPONENTS, test x$with_vorbiscomponents = xtrue && test x$with_vorbislibrary = xtrue)



AC_OUTPUT([
	Makefile		\
	libomxil.pc		\
	include/Makefile        \
	src/Makefile		\
	src/base/Makefile		\
	src/components/Makefile	\
	src/components/alsa/Makefile	\
	src/components/ffmpeg/Makefile	\
	src/components/mad/Makefile	\
	src/components/vorbis/Makefile	\
	test/Makefile		\
	test/components/Makefile	\
	test/components/audio/Makefile	

])
