EXTRA_LTLIBRARIES=libomxbase.la

libomxbase_la_SOURCES =omx_base_component.c 	\
			omx_base_port.c 	\
			omx_base_filter.c 	\
			omx_base_sink.c 

noinst_HEADERS = 	omx_base_component.h 	\
			omx_base_port.h 	\
			omx_base_filter.h 	\
			omx_base_sink.h \
			omx_classmagic.h

INCLUDES = -I../../include/ -I../ -I./

all: libomxbase.la

