noinst_LTLIBRARIES = libomxbase.la

libomxbase_la_SOURCES = omx_base_component.c omx_base_component.h \
                        omx_base_port.c omx_base_port.h \
                        omx_base_filter.c omx_base_filter.h \
                        omx_base_sink.c omx_base_sink.h \
                        omx_base_source.c omx_base_source.h \
                        omx_base_audio_port.c omx_base_audio_port.h \
                        omx_base_video_port.c omx_base_video_port.h \
                        omx_base_image_port.c omx_base_image_port.h \
                        omx_base_clock_port.c omx_base_clock_port.h \
                        omx_classmagic.h

libomxbase_la_CFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/src
