if WITH_FFMPEGCOMPONENTS
    MAYBE_FFMPEG = ffmpeg
    MAYBE_FILEREADER = filereader
endif

if WITH_AUDIOEFFECTS
    MAYBE_AUDIO_EFFECTS = audio_effects
endif

if WITH_MADCOMPONENTS
    MAYBE_MAD = mad
endif 

if WITH_ALSASINK
    MAYBE_ALSA = alsa
endif 

if WITH_VORBISCOMPONENTS
    MAYBE_VORBIS = vorbis
endif

if WITH_FBDEV_VIDEOSINK
    MAYBE_FBDEV = fbdev
endif

if WITH_VIDEOSRC
    MAYBE_VIDEOSRC = video_src
endif

SUBDIRS = $(MAYBE_FFMPEG) $(MAYBE_FILEREADER) $(MAYBE_AUDIO_EFFECTS) $(MAYBE_MAD) $(MAYBE_ALSA) $(MAYBE_VORBIS) $(MAYBE_FBDEV) $(MAYBE_VIDEOSRC)
