omxvolcontroldir = $(libdir)/omxilcomponents

omxvolcontrol_LTLIBRARIES = libomxvolcontrol.la

libomxvolcontrol_la_SOURCES = omx_volume_component.c library_entry_point.c omx_volume_component.h
libomxvolcontrol_la_LIBADD = ../../../src/libomxil.la

AM_CPPFLAGS = -I@top_srcdir@/include -I@top_srcdir@/src -I@top_srcdir@/src/base
